--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,21 +8,32 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Get repo files
+        uses: actions/checkout@v3
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: docker build -t alvarogomen93/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true alvarogomen93/react-test npm test
+      - name: Build dev container
+        run: docker build -t alvarogomen93/react-test -f ./client/Dockerfile.dev ./client
+      - name: Run tests on dev container
+        run: docker run -e CI=true alvarogomen93/react-test npm test
 
-      - run: docker build -t alvarogomen93/multi-client ./client
-      - run: docker build -t alvarogomen93/multi-nginx ./nginx
-      - run: docker build -t alvarogomen93/multi-server ./server
-      - run: docker build -t alvarogomen93/multi-worker ./worker
+      - name: Build client container
+        run: docker build -t alvarogomen93/multi-client ./client
+      - name: Build nginx container
+        run: docker build -t alvarogomen93/multi-nginx ./nginx
+      - name: Build server container
+        run: docker build -t alvarogomen93/multi-server ./server
+      - name: Build worker container
+        run: docker build -t alvarogomen93/multi-worker ./worker
 
-      - run: docker push alvarogomen93/multi-client
-      - run: docker push alvarogomen93/multi-nginx
-      - run: docker push alvarogomen93/multi-server
-      - run: docker push alvarogomen93/multi-worker
+      - name: Push client container
+        run: docker push alvarogomen93/multi-client
+      - name: Push nginx container
+        run: docker push alvarogomen93/multi-nginx
+      - name: Push server container
+        run: docker push alvarogomen93/multi-server
+      - name: Push worker container
+        run: docker push alvarogomen93/multi-worker
